2004-09-08  Murray Cumming  <murrayc@murrayc.com>

	* rnsysadmin.xml: Mention new gconf-editor features. 

2004-09-07  Murray Cumming  <murrayc@murrayc.com>

	* rnstandards.xml: Mentioned MIME spec.

2004-09-07  Murray Cumming  <murrayc@murrayc.com>

	* rninstallation.xml: Mentioned MIME changes, and XDG_DATA_DIRS.
	* TODO: Updated to show what is still to be done.

2004-09-07  Murray Cumming  <murrayc@murrayc.com>

	* rnrelease.xml: Mentioned the focus of this release. Removed links to 
	accessibility, help, svg and, and lockdown pages, until we discover  
	something interesting there has changed. Added link to rnsysadmin.xml.
	* Added rnsysadmin.xml
	* Makefile: Updated appropriately.

2004-09-06  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Mention improved Add dialog.
	* TODO: Updated.

2004-09-06  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Simplified some sentences a bit. Add the figures 
	sections.

2004-09-06  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Put the nautilus bits in here from TODO.
	* rnapplications.xml: Move the evolution part here from rndesktop.xml,
	and mentioned some epiphany stuff that I see in their NEWS file.

2004-09-05  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Rewrote the MIME-type bit. Hopefully it's correct.

2004-09-01  Murray Cumming  <murrayc@murrayc.com>

	* Added early version of the press release, mostly with text from 
	a draft of the 2.6 one.
