@@ -156,6 +156,6 @@
 <!--<xi:include href="rnthanks.xml"/>-->
       <appendix id="rncredits">
         <title>Credits</title>
-        <para>These release notes were assembled by Murray Cumming, Colin Charles and many more.</para>
+        <para>These release notes were assembled by Murray Cumming, Colin Charles, and Davyd Madeley.</para>
       </appendix>
 </article>
